--- a/Jexpr/Jexpr.csproj
+++ b/Jexpr/Jexpr.csproj
@@ -15,6 +15,8 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\PromotionService\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,11 +37,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Jint, Version=2.5.0.0, Culture=neutral, PublicKeyToken=2e92ba9c8d81157f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Jint.2.5.0\lib\portable-net40+sl50+win+wpa81+wp80\Jint.dll</HintPath>
+      <HintPath>..\..\PromotionService\packages\Jint.2.5.0\lib\portable-net40+sl50+win+wpa81+wp80\Jint.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\PromotionService\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -56,13 +58,13 @@
     <Compile Include="Common\JsonNetSerializer.cs" />
     <Compile Include="Common\ObjectExtensions.cs" />
     <Compile Include="Core\IExpressionBuilder.cs" />
-    <Compile Include="Core\IExpressionEvalContext.cs" />
+    <Compile Include="Core\IJexprEngine.cs" />
     <Compile Include="Core\IExpressionStringGenerator.cs" />
-    <Compile Include="Core\Impl\ExpressionEvalContext.cs" />
+    <Compile Include="Core\Impl\JexprEngine.cs" />
     <Compile Include="Core\Impl\ExpressionStringGenerator.cs" />
     <Compile Include="Core\Impl\JsExpressionBuilder.cs" />
     <Compile Include="Core\Impl\JsExpressionVisitor.cs" />
-    <Compile Include="Core\Impl\JsFuncResult.cs" />
+    <Compile Include="Core\Impl\JsExecResult.cs" />
     <Compile Include="Core\Impl\ScriptLoader.cs" />
     <Compile Include="Core\IScriptLoader.cs" />
     <Compile Include="ExpressionGroup.cs" />
@@ -71,7 +73,7 @@
     <Compile Include="MacroOp.cs" />
     <Compile Include="Models\JexprExpression.cs" />
     <Compile Include="Models\ExpressionDefinition.cs" />
-    <Compile Include="Models\ExpressionEvalResult.cs" />
+    <Compile Include="Models\EvalResult.cs" />
     <Compile Include="Models\JsExpressionResult.cs" />
     <Compile Include="Models\JexprMacroExpression.cs" />
     <Compile Include="Models\MacroOpDefinition.cs" />
@@ -88,6 +90,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
