--- a/Jexpr.Tests/Jexpr.Tests.csproj
+++ b/Jexpr.Tests/Jexpr.Tests.csproj
@@ -49,6 +49,17 @@
     </Reference>
     <Reference Include="Moq, Version=4.2.1502.911, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
+    <Reference Include="FluentAssertions">
+      <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions.Core">
+      <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="nunit.framework">
@@ -69,10 +80,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basket.cs" />
-    <Compile Include="BasketItem.cs" />
     <Compile Include="ExpressionEvalContextTests.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="PromotionApplyResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemplateEngineTests.cs" />
     <Compile Include="TestDataBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
