--- a/Jexpr/packages.config
+++ b/Jexpr/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Jint" version="2.5.0" targetFramework="net451" userInstalled="true" />
   <package id="lodash" version="3.9.3" targetFramework="net451" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="NLog" version="4.0.1" targetFramework="net451" />
 </packages>
