--- a/Jexpr/Jexpr.csproj
+++ b/Jexpr/Jexpr.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Common\EnumExtensions.cs" />
     <Compile Include="Common\ISerializer.cs" />
     <Compile Include="Common\JsonNetSerializer.cs" />
-    <Compile Include="Common\ObjectExtensions.cs" />
+    <Compile Include="Common\DictionaryExtensions.cs" />
     <Compile Include="Common\SubSet.cs" />
     <Compile Include="Core\IJsExpressionConcatService.cs" />
     <Compile Include="Core\IJexprEngine.cs" />
@@ -74,8 +74,11 @@
     <Compile Include="ExpressionGroup.cs" />
     <Compile Include="ExpressionGroupOp.cs" />
     <Compile Include="ExpressionOp.cs" />
+    <Compile Include="Filters\ApplyExactFilter.cs" />
+    <Compile Include="Filters\ApplyExactToSumFilter.cs" />
+    <Compile Include="Filters\ApplyExactToSumUsingParamtersFilter.cs" />
     <Compile Include="Filters\IHasResultProperty.cs" />
-    <Compile Include="Filters\JexprFilter.cs" />
+    <Compile Include="Filters\AbstractFilter.cs" />
     <Compile Include="Filters\ApplyPercentToSumFilter.cs" />
     <Compile Include="Filters\ExistsFilter.cs" />
     <Compile Include="Filters\GroupByFilter.cs" />
@@ -84,17 +87,19 @@
     <Compile Include="Filters\MinFilter.cs" />
     <Compile Include="Filters\ResultProperty.cs" />
     <Compile Include="Filters\SelectFilter.cs" />
-    <Compile Include="Filters\SetResultFilter.cs" />
-    <Compile Include="Filters\SetTakeToResultFilter.cs" />
+    <Compile Include="Filters\AssignExactTakeToResultFilter.cs" />
+    <Compile Include="Filters\AssignToResultFilter.cs" />
+    <Compile Include="Filters\AssignApplyArithmeticToSumToResultFilter.cs" />
+    <Compile Include="Filters\AssignTakeToResultFilter.cs" />
     <Compile Include="Filters\SumFilter.cs" />
     <Compile Include="Filters\TakeFilter.cs" />
-    <Compile Include="MacroOp.cs" />
+    <Compile Include="FilterOperator.cs" />
     <Compile Include="Models\JexprExpression.cs" />
     <Compile Include="Models\ExpressionMetadata.cs" />
     <Compile Include="Models\JexprResult.cs" />
     <Compile Include="Models\JsExpressionResult.cs" />
-    <Compile Include="Models\JexprMacroExpression.cs" />
-    <Compile Include="Models\SimpleJexprExpression.cs" />
+    <Compile Include="Models\MacroExpression.cs" />
+    <Compile Include="Models\BasicExpression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturnTypes.cs" />
     <Compile Include="Templates\JexprJsGeneratorTemplate.cs">
