--- a/Jexpr/Jexpr.csproj
+++ b/Jexpr/Jexpr.csproj
@@ -72,42 +72,41 @@
     <Compile Include="Core\Impl\NullLogger.cs" />
     <Compile Include="Core\Impl\JsReferenceLoader.cs" />
     <Compile Include="Core\IScriptLoader.cs" />
-    <Compile Include="ExpressionGroup.cs" />
-    <Compile Include="ExpressionGroupOp.cs" />
-    <Compile Include="ExpressionOp.cs" />
+    <Compile Include="Filters\FunctionFilter.cs" />
+    <Compile Include="Filters\SumWithMultiplyFilter.cs" />
+    <Compile Include="OperationExpression.cs" />
     <Compile Include="Filters\AssignConditionalToResultFilter.cs" />
     <Compile Include="Filters\AssignExactToResultFilter.cs" />
-    <Compile Include="Filters\EqualFilter.cs" />
+    <Compile Include="Filters\ConditionFilter.cs" />
     <Compile Include="Filters\ReturnExactFilter.cs" />
-    <Compile Include="Filters\ApplyExactToSumFilter.cs" />
+    <Compile Include="Filters\ApplyToSumFilter.cs" />
     <Compile Include="Filters\ApplyExactToSumUsingParamtersFilter.cs" />
     <Compile Include="Filters\AssignTakeSumOfMaxXItemToResultFilter.cs" />
     <Compile Include="Filters\AssignTakeToResultFilter.cs" />
     <Compile Include="Filters\AbstractFilter.cs" />
-    <Compile Include="Filters\ApplyPercentToSumFilter.cs" />
-    <Compile Include="Filters\ExistsFilter.cs" />
     <Compile Include="Filters\GroupByFilter.cs" />
-    <Compile Include="Filters\IndexOfFilter.cs" />
-    <Compile Include="Filters\MaxFilter.cs" />
-    <Compile Include="Filters\MinFilter.cs" />
     <Compile Include="Filters\ReturnExactUsingParamtersFilter.cs" />
     <Compile Include="Filters\SelectFilter.cs" />
     <Compile Include="Filters\AssignExactTakeToResultFilter.cs" />
     <Compile Include="Filters\AssignToResultFilter.cs" />
-    <Compile Include="Filters\AssignApplyArithmeticToSumToResultFilter.cs" />
+    <Compile Include="Filters\ApplyConditionToSumThenAssignToResultFilter.cs" />
     <Compile Include="Filters\AssignTakeSumOfMinXItemToResultFilter.cs" />
     <Compile Include="Filters\SumFilter.cs" />
     <Compile Include="Filters\SumOfTakeXItemFilter.cs" />
     <Compile Include="Filters\TakeSumOfMaxXItemFilter.cs" />
     <Compile Include="Filters\TakeSumOfMinXItemFilter.cs" />
     <Compile Include="Interface\IHasResultProperty.cs" />
-    <Compile Include="Models\JexprExpression.cs" />
+    <Compile Include="Models\AbstractExpression.cs" />
     <Compile Include="Models\ExpressionMetadata.cs" />
     <Compile Include="Models\JexprResult.cs" />
     <Compile Include="Models\JsExpressionResult.cs" />
-    <Compile Include="Models\MacroExpression.cs" />
+    <Compile Include="Models\OperationExpression.cs" />
     <Compile Include="Models\BasicExpression.cs" />
     <Compile Include="Models\ResultProperty.cs" />
+    <Compile Include="Operators\ApplyOperator.cs" />
+    <Compile Include="Operators\ConditionOperator.cs" />
+    <Compile Include="Operators\FunctionOperator.cs" />
+    <Compile Include="Operators\OperationOperator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Templates\JexprJsGeneratorTemplate.cs">
       <AutoGen>True</AutoGen>
