--- a/Jexpr.Tests/Jexpr.Tests.csproj
+++ b/Jexpr.Tests/Jexpr.Tests.csproj
@@ -71,10 +71,10 @@
   <ItemGroup>
     <Compile Include="JexprEngineComplexScenarioTests.cs" />
     <Compile Include="JexprEngineTests.cs" />
-    <Compile Include="Models\Basket.cs" />
-    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\TestBasket.cs" />
+    <Compile Include="Models\TestProduct.cs" />
     <Compile Include="Models\TestApplyResult.cs" />
-    <Compile Include="Models\PromotionRequest.cs" />
+    <Compile Include="Models\TestPromotionRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateEngine.GroupBy.Tests.cs" />
     <Compile Include="JexprT4TemplateTransformTests.cs" />
