--- a/Jexpr/Jexpr.csproj
+++ b/Jexpr/Jexpr.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Common\IInternalSerializer.cs" />
     <Compile Include="Common\InternalJsonNetSerializer.cs" />
     <Compile Include="Common\DictionaryExtensions.cs" />
+    <Compile Include="Common\ObjectExtensions.cs" />
     <Compile Include="Common\SubSet.cs" />
     <Compile Include="Core\IJsExpressionConcatService.cs" />
     <Compile Include="Core\IJexprEngine.cs" />
@@ -74,27 +75,22 @@
     <Compile Include="Core\IScriptLoader.cs" />
     <Compile Include="Filters\FunctionFilter.cs" />
     <Compile Include="Filters\SumWithMultiplyFilter.cs" />
-    <Compile Include="OperationExpression.cs" />
+    <Compile Include="ExpressionGroup.cs" />
     <Compile Include="Filters\AssignConditionalToResultFilter.cs" />
     <Compile Include="Filters\AssignExactToResultFilter.cs" />
     <Compile Include="Filters\ConditionFilter.cs" />
-    <Compile Include="Filters\ReturnExactFilter.cs" />
+    <Compile Include="Filters\AssignConditionalExactFilter.cs" />
     <Compile Include="Filters\ApplyToSumFilter.cs" />
     <Compile Include="Filters\ApplyExactToSumUsingParamtersFilter.cs" />
-    <Compile Include="Filters\AssignTakeSumOfMaxXItemToResultFilter.cs" />
-    <Compile Include="Filters\AssignTakeToResultFilter.cs" />
+    <Compile Include="Filters\AssignSumOfXItemToResultFilter.cs" />
     <Compile Include="Filters\AbstractFilter.cs" />
     <Compile Include="Filters\GroupByFilter.cs" />
-    <Compile Include="Filters\ReturnExactUsingParamtersFilter.cs" />
+    <Compile Include="Filters\AssignConditionalExactUsingParamtersFilter.cs" />
     <Compile Include="Filters\SelectFilter.cs" />
-    <Compile Include="Filters\AssignExactTakeToResultFilter.cs" />
     <Compile Include="Filters\AssignToResultFilter.cs" />
     <Compile Include="Filters\ApplyConditionToSumThenAssignToResultFilter.cs" />
-    <Compile Include="Filters\AssignTakeSumOfMinXItemToResultFilter.cs" />
     <Compile Include="Filters\SumFilter.cs" />
     <Compile Include="Filters\SumOfTakeXItemFilter.cs" />
-    <Compile Include="Filters\TakeSumOfMaxXItemFilter.cs" />
-    <Compile Include="Filters\TakeSumOfMinXItemFilter.cs" />
     <Compile Include="Interface\IHasResultProperty.cs" />
     <Compile Include="Models\AbstractExpression.cs" />
     <Compile Include="Models\ExpressionMetadata.cs" />
@@ -107,6 +103,7 @@
     <Compile Include="Operators\ConditionOperator.cs" />
     <Compile Include="Operators\FunctionOperator.cs" />
     <Compile Include="Operators\OperationOperator.cs" />
+    <Compile Include="Operators\SortDirection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Templates\JexprJsGeneratorTemplate.cs">
       <AutoGen>True</AutoGen>
