--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,18 @@ configuration: Release
 branches:
   only:
     - master
-
+environment:
+  COVERALLS_REPO_TOKEN:
+    secure: ciX3TgvZgv9faGZ5TU3q8hHQ0Jfz5oQZ3
 before_build:
   - nuget restore Jexpr.sln
 
 build:
   project: Jexpr.sln       
   verbosity: minimal
+  
+test_script:
+  - packages\OpenCover.4.5.3522\OpenCover.Console.exe -register:user -filter:"+[Coveralls*]*" -target:packages\NUnit.Runners.2.6.4\tools\nunit-console.exe -targetargs:"/noshadow /domain:single /framework:net-4.5 Jexpr.Tests\bin\%CONFIGURATION%\Jexpr.Tests.dll" -filter:"+[Jexpr]* -[Jexpr.Tests]*" -output:coverage.xml
+
+after_test:
+  - packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml -r ciX3TgvZgv9faGZ5TU3q8hHQ0Jfz5oQZ3
