--- a/Jexpr.Tests/packages.config
+++ b/Jexpr.Tests/packages.config
@@ -7,4 +7,5 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="NLog" version="4.0.1" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
+  <package id="coveralls.io" version="1.3.4" targetFramework="net451" userInstalled="true" />
 </packages>
