--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ build:
   verbosity: minimal
   
 test_script:
-  - packages\OpenCover.4.5.3522\OpenCover.Console.exe -register:user -filter:"+[Coveralls*]*" -target:packages\NUnit.Runners.2.6.4\tools\nunit-console.exe -targetargs:"/noshadow /domain:single /framework:net-4.5 Jexpr.Tests\bin\%CONFIGURATION%\Jexpr.Tests.dll" -filter:"+[Jexpr]* -[Jexpr.Tests]*" -output:coverage.xml
+  - packages\OpenCover.4.5.3522\OpenCover.Console.exe -register:user -filter:"+[Coveralls*]*" -target:packages\NUnit.Runners.2.6.4\tools\nunit-console.exe -targetargs:"/noshadow /domain:single /framework:net-4.5 Jexpr.Tests\bin\%CONFIGURATION%\Jexpr.Tests.dll" -filter:"+[Jexpr]* -[Jexpr.Templates*]* -[Jexpr.Tests]*" -output:coverage.xml
 
 after_test:
   - packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml -r ciX3TgvZgv9faGZ5TU3q8hHQ0Jfz5oQZ3
