--- a/Jexpr/Jexpr.csproj
+++ b/Jexpr/Jexpr.csproj
@@ -109,6 +109,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>JexprJsGeneratorTemplate.tt</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Templates\JexprJsGeneratorTemplate.Parameters.cs" />
   </ItemGroup>
@@ -130,6 +131,7 @@
     <Content Include="Templates\JexprJsGeneratorTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>JexprJsGeneratorTemplate.cs</LastGenOutput>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
